# decal

./: README.md
decal-core/: Cargo.toml
decal-core/src/: lib.rs
decal-macros/: Cargo.toml
