[package]
name = "decal"
description = "Declarative DSL for describing scenes and rendering them to SVG or PNG"
version = "0.6.1"
edition = "2021"
license.workspace = true
rust-version = "1.87.0"
repository = "https://github.com/zignis/decal"
keywords = ["svg", "graphics", "rendering", "image", "vector"]
categories = ["graphics", "rendering", "multimedia::images"]
exclude = ["/examples"]
readme = "../README.md"

[features]
default = ["helpers"]
helpers = []
grid = ["taffy/grid"]

[dependencies]
base64 = "0.22.1"
color = "0.3.2"
cosmic-text = { version = "0.18.2", features = ["shape-run-cache", "hashbrown"] }
decal-macros = { version = "0.6.0", path = "../decal-macros" }
enum-display = "0.2.1"
hashbrown = "0.16.1"
infer = "0.19.0"
lru = "0.16.2"
parking_lot = "0.12.5"
png = "0.18.0"
quick-xml = "0.39.0"
resvg = "0.47.0"
ryu = "1.0.20"
smallvec = "1.15.1"
smart-default = "0.7.1"
strict-num = "0.2.0"
swash = { version = "0.2.6", features = ["scale"] }
taffy = { version = "0.9.2", default-features = false, features = ["std", "taffy_tree", "flexbox", "block_layout", "calc", "content_size", "detailed_layout_info"] }
thiserror = "2.0.17"
tiny-skia = "0.12.0"
twox-hash = { version = "2.1.2", default-features = false, features = ["std", "xxhash3_64"] }
ureq = "3.1.4"
usvg = "0.47.0"
zeno = "0.3.3"

[dev-dependencies]
xmltree = "0.12.0"
