[package]
name = "decal-macros"
description = "Macros for constructing Decal nodes"
version = "0.6.1"
edition = "2021"
license.workspace = true
rust-version = "1.87.0"
repository = "https://github.com/zignis/decal"
keywords = ["svg", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = ["/tests", "/wip"]

[lib]
proc-macro = true

[dependencies]
hashbrown = "0.16.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.106"
walkdir = "2.5.0"
decal = { path = "../decal-core" }
